# PokeBot

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt
game_mod/: agent_bridge.rb  preload.rb.patch.txt
src/anil_agent/: action_schema.py  bridge_client.py  config.py  decision_loop.py  discord_bot.py  gemini_client.py  input_controller.py  logging_setup.py  main.py  overlay.py  report_store.py  reporter.py  window_capture.py
src/anil_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
